# Auth.xjtu

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/auth_xjtu/: __init__.py  authenticator.py
src/auth_xjtu/core/: find_entry.py  follow_redirects.py  payload_constructor.py
tests/: test_authenticator.py
tests/data/: entry-point-list.txt
